@@ -349,7 +349,7 @@
    <section id="suppress-error-charset">
        <title>suppress-error-charset</title>
 
-    <p><em>Available in versions after 2.0.40</em></p>
+    <p><em>Available in versions 2.2 and later</em></p>
 
     <p>When Apache issues a redirect in response to a client request,
     the response includes some actual text to be displayed in case
